<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        tools:context=".ImcActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/BPM_title" />

        <TextView
            style="@style/TextViewTemplate"
            android:text="@string/BPM_description"/>

        <Spinner
            android:id="@+id/BPM_spinner"
            style="@style/SpinnerTemplate"
            android:entries="@array/gender_array"
            />

        <EditText
            android:id="@+id/BPM_age"
            style="@style/EditTextTemplate"
            android:hint="@string/GEN_age" />

        <!-- <EditText
            android:id="@+id/BPM_height"
            style="@style/EditTextTemplate"
            android:hint="@string/GEN_height" /> -->

        <Button
            android:id="@+id/BPM_button"
            style="@style/ButtonTemplate"
            android:text="@string/GEN_button" />

    </LinearLayout>
</ScrollView>

